syntax = "proto3";

package Video;

enum VideoTransportPublishStatus {
  TRANSPORT_PENDING = 0;
  TRANSPORT_PROCESSING = 1;
  TRANSPORT_PROCESSED = 2;
  TRANSPORT_PUBLISHED = 3;
  TRANSPORT_FAILED = 4;
}

enum VideoTransportVisibilityStatus {
  TRANSPORT_PRIVATE = 0;
  TRANSPORT_PUBLIC = 1;
  TRANSPORT_UNLISTED = 2;
}

enum VideoTransportSortOption {
  TRANSPORT_NEWEST = 0;
  TRANSPORT_OLDEST = 1;
  TRANSPORT_POPULAR = 2;
}

message GetPresignedUrlDto {
  optional string fileName = 1;
  string userId = 2;
}

message VideoCreateDto {
  string ownerId = 1;
  string channelId = 2;
  string title = 3;
  string videoFileIdentifier = 4;
  string videoThumbnailIdentifier = 5;
  repeated string categories = 6;
  optional string description = 7;
  VideoTransportPublishStatus videoTransportPublishStatus = 8;
  VideoTransportVisibilityStatus videoTransportVisibilityStatus = 9;
}

message VideoUpdateDto {
  string id = 1;
  optional string title = 2;
  optional string videoFileIdentifier = 3;
  optional string videoThumbnailIdentifier = 4;
  repeated string categories = 5;
  optional string description = 6;
  optional VideoTransportPublishStatus videoTransportPublishStatus = 7;
  optional VideoTransportVisibilityStatus videoTransportVisibilityStatus = 8;
}

message GetPreSignedUrlResponse {
  string response = 1;
  string presignedUrl = 2;
  string fileIdentifier = 3;
}

message VideoPublishedResponse {
  string response = 1;
  string videoId = 2;
}

message VideoUpdatedResponse {
  string response = 1;
  string videoId = 2;
}

message Empty {}

service VideoService {
  rpc getPresignedUrlForVideoFileUpload(GetPresignedUrlDto) returns (GetPreSignedUrlResponse) {}
  rpc getPresignedUrlForThumbnailFileUpload(GetPresignedUrlDto) returns (GetPreSignedUrlResponse) {}
  rpc save(VideoCreateDto) returns (VideoPublishedResponse) {}
  rpc update(VideoUpdateDto) returns (VideoUpdatedResponse) {}
}